# arkoi_language

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: basic_types.md  conversion.md  functions.md
example/: test.ark  test.asm  test.dot  test_opt.dot  test_org.dot
example/cc/: cc.ark  cc.asm  cc_opt.dot  cc_opt.il  cc_org.dot  cc_org.il
example/hello_world/: main.ark  main.asm  main_opt.dot  main_opt.il  main_org.dot  main_org.il
example/test/: test.ark  test.asm  test.il  test_opt.dot  test_opt.il  test_org.dot  test_org.il
include/: ast.h  ast.hpp  cfg.hpp  constant_folding.hpp  cursor.h  data.hpp  gas_assembly.h  gas_assembly.hpp  gas_generator.h  gas_generator.hpp  il_generator.h  il_generator.hpp  il_printer.h  il_printer.hpp  instruction.h  instruction.hpp  memory_resolver.h  memory_resolver.hpp  name_resolution.h  name_resolver.h  name_resolver.hpp  operand.h  operand.hpp  optimization.hpp  parser.h  parser.hpp  scanner.h  scanner.hpp  symbol.h  symbol.hpp  symbol_resolver.hpp  symbol_table.h  symbol_table.hpp  tac.h  token.h  token.hpp  type.h  type.hpp  type_resolver.h  type_resolver.hpp  (+3 more)
include/argparse/: argparse.hpp
include/ast/: nodes.hpp  visitor.hpp
include/back/mir/: operand.hpp
include/back/x86_64/: assembly.hpp  generator.hpp  operand.hpp  operand_resolver.hpp
include/backend/x86_64/: assembly.hpp  gas_assembly.hpp  gas_generator.hpp  generator.hpp  memory_resolver.hpp  operand.hpp  operand_resolver.hpp
include/def/: ast.hpp  symbol.hpp  type.hpp
include/front/: parser.hpp  scanner.hpp  token.hpp
include/frontend/: ast.hpp  parser.hpp  scanner.hpp  token.hpp
include/il/: analyses.hpp  cfg.hpp  cfg_printer.hpp  dataflow.hpp  generator.hpp  il_printer.hpp  instruction.hpp  operand.hpp  printer.hpp  visitor.hpp
include/mid/: cfg.hpp  cfg_printer.hpp  generator.hpp  il_printer.hpp  instruction.hpp  name_resolver.hpp  operand.hpp  printer.hpp  symbol_table.hpp  type_resolver.hpp
include/opt/: constant_folding.hpp  constant_propagation.hpp  dce.hpp  dead_code_elimination.hpp  optimization.hpp  pass.hpp  simplify_cfg.hpp
include/optimization/: constant_folding.hpp  constant_propagation.hpp  dce.hpp  memory_resolver.hpp  optimization.hpp
include/sem/: name_resolver.hpp  symbol.hpp  symbol_table.hpp  type.hpp  type_resolver.hpp
include/semantic/: name_resolver.hpp  symbol.hpp  symbol_table.hpp  type.hpp  type_resolver.hpp
include/utils/: data.hpp  dep_graph.hpp  interference_graph.hpp  ordered_set.hpp  size.hpp  utils.hpp  visitor.hpp
include/x86_64/: assembly.hpp  generator.hpp  mapper.hpp  memory.hpp  memory_mapping.hpp  operand.hpp  register.hpp  register_allocation.hpp  stack.hpp
src/: ast.cpp  cfg.cpp  cfg.tpp  constant_folding.cpp  cursor.cpp  data.cpp  gas_assembly.cpp  gas_generator.cpp  il_generator.cpp  il_printer.cpp  instruction.cpp  main.cpp  memory_resolver.cpp  name_resolution.cpp  name_resolution.tpp  name_resolver.cpp  name_resolver.tpp  operand.cpp  optimization.cpp  optimization.tpp  parser.cpp  scanner.cpp  symbol.cpp  symbol_resolver.cpp  symbol_table.cpp  symbol_table.tpp  tac.cpp  token.cpp  type.cpp  type_resolver.cpp
src/back/mir/: operand.cpp
src/back/x86_64/: assembly.cpp  generator.cpp  operand.cpp  operand_resolver.cpp
src/backend/x86_64/: assembly.cpp  gas_assembly.cpp  gas_generator.cpp  generator.cpp  memory_resolver.cpp  operand.cpp  operand_resolver.cpp
src/def/: size.cpp  symbol.cpp  type.cpp
src/front/: parser.cpp  scanner.cpp  token.cpp
src/frontend/: parser.cpp  scanner.cpp  token.cpp
src/il/: analyses.cpp  cfg.cpp  cfg.tpp  cfg_printer.cpp  dataflow.cpp  dataflow.tpp  generator.cpp  il_printer.cpp  instruction.cpp  operand.cpp  printer.cpp
src/mid/: cfg.cpp  cfg.tpp  cfg_printer.cpp  generator.cpp  il_printer.cpp  instruction.cpp  name_resolver.cpp  name_resolver.tpp  operand.cpp  printer.cpp  symbol_table.tpp  type_resolver.cpp
src/opt/: constant_folding.cpp  constant_propagation.cpp  dce.cpp  dead_code_elimination.cpp  optimization.cpp  optimization.tpp  pass.cpp  pass.tpp  simplify_cfg.cpp
src/optimization/: constant_folding.cpp  constant_propagation.cpp  dce.cpp  memory_resolver.cpp  optimization.cpp  optimization.tpp
src/sem/: name_resolver.cpp  name_resolver.tpp  symbol.cpp  symbol_table.tpp  type.cpp  type_resolver.cpp
src/semantic/: name_resolver.cpp  name_resolver.tpp  symbol.cpp  symbol_table.tpp  type.cpp  type_resolver.cpp
src/utils/: data.cpp  dep_graph.cpp  dep_graph.tpp  interference_graph.tpp  ordered_set.tpp  size.cpp
src/x86_64/: assembly.cpp  generator.cpp  mapper.cpp  memory.cpp  memory_mapping.cpp  operand.cpp  register.cpp  register_allocation.cpp  stack.cpp
test/: test_cfg.cpp  test_dep_graph.cpp  test_interference.cpp  test_scanner.cpp
test/snapshot/: snapshot.cpp  snapshot.hpp  test_snapshot.cpp
test/snapshot/scanner/: 01-comments.snapshot  02-keywords.ark  02-keywords.snapshot  03-special.ark  03-special.snapshot  04-indentation.ark  04-indentation.snapshot  05-integer.ark  05-integer.snapshot  06-floating.ark  06-floating.snapshot  07-identifier.snapshot  08-all.snapshot
